Modules/_localemodule.c
@@ -73,11 +73,7 @@ copy_grouping(const char* s)
         val = PyLong_FromLong(s[i]);
         if (!val)
             break;
-        if (PyList_SetItem(result, i, val)) {
-            Py_DECREF(val);
-            val = NULL;
-            break;
-        }
+        PyList_SET_ITEM(result, i, val);
     } while (s[i] != '\0' && s[i] != CHAR_MAX);
 
     if (!val) {
